Closed Bug 96029 Opened 24 years ago Closed 24 years ago

The Save-As dialog was displayed for a text/html page

Categories

(Core :: DOM: Navigation, defect)

All
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: rpotts, Assigned: rpotts)

References

Details

Attachments

(1 file)

I've hit another edge case where the save-as dialog appears for a HTML page... This time, i was hitting back and forward (between www.mozilla.org and www.cnn.com) trying to reproduce another bug :-) After a while, I got an ASSERTION in nsDSURIContentListener that mDocShell was NULL. After continuing, the save-as dialog appeared :-( Here's what happened: If nsIURIContentListener::DoContent(...) fails the URI load *does not* fail... Instead it drops down into the save-as code :-( This seems wrong.
hey scott, does this patch make sense... or was there a reason that the status code from DoContent was ignored? -- rick
is this related to (or a dup of) bug #81576?
looks okay to me rick. r/sr=mscott
adam, jud, can i get a quick review so i can check this one in? thanks, -- rick
r=valeski
patch check in...
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
The fix caused serious regression. See bug 96418
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Blocks: 96418
I'm closing this out again because bug #96418 covers the regression that was introduced...
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: