bug #96029 (r=valeski, sr=mscott) Loading cnn.com caused the sav-as dialog to appear...